--- a/main.html
+++ b/main.html
@@ -8,6 +8,59 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<div>
+		  <label for="name">Name</label>
+		  <input type="text" id="name" placeholder="Name" required></input>
+		</div>
+
+		<div>
+		  <label for="email">Email</label>
+		  <input type="email" id="email" placeholder="Email" required></input>
+		</div>
+		<div>
+		<label>Gender</label>
+        <label>
+		  <input type="radio" required name="gender" id="gender_m" value="Male">Male</input>
+		</label>
+		<label>
+			<input type="radio" name="gender" id="gender_f" value="Female">Female</input>
+		</label>
+		</div>
+		
+		<div>
+		<label>Car brands:</label>
+		<select id="cars" required>
+			<option disabled selected>--please choose an option--</option>
+			<option id="Bugati" value="Bugati">Bugati</option>
+			<option id="Lamborgini" value="Lamborgini">Lamborgini</option>
+			<option id="BMW" value="BMW">BMW</option>
+			<option id="Audi" value="Audi">Audi</option>
+		</select>
+		</div>
+		
+		<div>
+		  <label for="age">Age</label>
+		  <input type="number" id="age" value="age" placeholder="Age" required></input>
+		</div>
+		<div>
+		  <label for="dob">Date</label>
+		  <input type="date" id="dob" required></input>
+		</div>
+		<div>
+			<label for="tel">Phone Number</label>
+			<input id="tel" type="Tel" placeholder="xxx-xxx-xxxx"></input>
+		</div>
+		<div>
+			<label for="password">Password</label>
+			<input type="password" id="password" placeholder="Password" required></input>
+		</div>
+		<div>
+			
+			<input type="checkbox" id="tos" required>I agree to the TOS</input>
+		</div>
+		<button type="submit">Sign Up</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
